Fixes repository header spacing

--- a/ci/web/front/less/repository/header/menu/repositoryHeaderMenu.less
+++ b/ci/web/front/less/repository/header/menu/repositoryHeaderMenu.less
@@ -2,6 +2,7 @@
 
 div.repositoryHeaderMenu {
 	display: table-row;
+	height: 30px;
 
 	.repositoryHeaderMenuOptions {
 		display: table;
