--- a/ci/web/front/less/repository/header/url/repositoryUrlPanel.less
+++ b/ci/web/front/less/repository/header/url/repositoryUrlPanel.less
@@ -1,6 +1,5 @@
 div.repositoryUrlPanel {
 	display: table-row;
-	height: 30px;
 
 	.relativePositionWrapper {	
 		position: relative;
